// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> (Snapshot Test) renders right 1`] = `
Array [
  <h1>
    Notes App
  </h1>,
  <form
    onChange={[Function]}
    onSubmit={[Function]}
  >
    <input
      name="title"
      placeholder="Title"
      value=""
    />
    <input
      name="content"
      placeholder="Content"
      value=""
    />
    <label>
      <span>
        editing
      </span>
      <input
        name="editing"
        type="checkbox"
      />
    </label>
    <label>
      <span>
        completed
      </span>
      <input
        name="completed"
        type="checkbox"
      />
    </label>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>,
  <ul />,
]
`;

exports[`<NoteCreateForm/> (Snapshot Test) renders right 1`] = `
<form
  onChange={[Function]}
  onSubmit={[Function]}
>
  <input
    name="title"
    placeholder="Title"
    value=""
  />
  <input
    name="content"
    placeholder="Content"
    value=""
  />
  <label>
    <span>
      editing
    </span>
    <input
      name="editing"
      type="checkbox"
    />
  </label>
  <label>
    <span>
      completed
    </span>
    <input
      name="completed"
      type="checkbox"
    />
  </label>
  <button
    type="submit"
  >
    Submit
  </button>
</form>
`;
